@@ -10,6 +10,10 @@ Version 1.7
 -----------
 (under development)
 
+- Lexers added:
+
+  * Clay (PR#184)
+
 - Python 3 lexer: add new exceptions from PEP 3151.
 
 
